<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homeFold"
    android:id="@+id/entire_view">

    <TextView
        android:id="@+id/palm_touch"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/palm_touch"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="32sp"
        android:textColor="@color/textColour"
        />

    <ImageView
        android:id="@+id/holding_phone"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:background="@drawable/default_grip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.20" />

    <ImageView
        android:id="@+id/touching_phone"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:background="@drawable/palm_touch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.20" />

    <TextView
        android:id="@+id/task_description"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:text="@string/palm_touch_test"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/holding_phone" />

    <TextView
        android:id="@+id/task_instructions"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:text="@string/palm_touch_test_instructions"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/touching_phone" />

    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/remainingIcons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnWidth="90dp"
        android:numColumns="4"
        android:verticalSpacing="15dp"
        android:horizontalSpacing="15dp"
        android:stretchMode="columnWidth"
        android:gravity="center" />

    <ImageView
        android:id="@+id/right_fold"
        android:layout_width="400dp"
        android:layout_height="460dp"
        android:background="@drawable/test_right_fold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintVertical_bias="0.10" />

    <ImageView
        android:id="@+id/left_fold"
        android:layout_width="400dp"
        android:layout_height="460dp"
        android:background="@drawable/test_left_fold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintVertical_bias="0.10" />


    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/testIcons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnWidth="90dp"
        android:numColumns="4"
        android:verticalSpacing="15dp"
        android:horizontalSpacing="15dp"
        android:stretchMode="columnWidth"
        android:gravity="center" />



    <Button
        android:id="@+id/launch_palm_test"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:background="@drawable/button_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.90" />

    <Button
        android:id="@+id/next_test"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:background="@drawable/button_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.90" />





</androidx.constraintlayout.widget.ConstraintLayout>