<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/test_results_title"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/test_results_title"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="32sp"
        android:textColor="@color/textColour"
        />

    <TextView
        android:id="@+id/test_results_subtitle"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/test_results_information"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07"


        android:textSize="18sp"
        />

    <ImageView
        android:id="@+id/direct_touch"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/direct_touch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintVertical_bias="0.18"/>

    <ProgressBar
        android:id="@+id/direct_touch_results"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:indeterminate="false"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:progressDrawable="@drawable/circular_progress"
        android:background="@drawable/circle_shape"
        style="?android:attr/progressBarStyleHorizontal"
        android:max="100"
         />

    <TextView
        android:id="@+id/direct_touch_text"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:gravity="right"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintVertical_bias="0.20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="32sp"
        android:textColor="@color/textColour"
        />

    <ImageView
        android:id="@+id/one_handed"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/one_handed_mode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintVertical_bias="0.43"/>

    <ProgressBar
        android:id="@+id/one_handed_results"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:indeterminate="false"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintVertical_bias="0.42"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:progressDrawable="@drawable/circular_progress"
        android:background="@drawable/circle_shape"
        style="?android:attr/progressBarStyleHorizontal"
        android:max="100"
         />

    <TextView
        android:id="@+id/one_handed_text"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:gravity="right"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintVertical_bias="0.43"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="32sp"
        android:textColor="@color/textColour"
        />

    <ImageView
        android:id="@+id/palm_touch"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/palm_touch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintVertical_bias="0.67"/>

    <ProgressBar
        android:id="@+id/palm_touch_results"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:indeterminate="false"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintVertical_bias="0.69"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:progressDrawable="@drawable/circular_progress"
        android:background="@drawable/circle_shape"
        style="?android:attr/progressBarStyleHorizontal"
        android:max="100"
         />

    <TextView
        android:id="@+id/palm_touch_text"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:gravity="right"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintVertical_bias="0.66"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="32sp"
        android:textColor="@color/textColour"
        />


    <Button
        android:id="@+id/return_home"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:background="@drawable/button_home"
        app:layout_constraintTop_toBottomOf="@+id/palm_touch"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.95"

      />


</androidx.constraintlayout.widget.ConstraintLayout>